# AudioPreamp

./: .gitmodules
Design/: biquad_filter.py  crossover.py  state_variable_filter.py  test_biquad_filter.py  test_state_variable_filter.py
Plugin/: CMakeLists.txt  readme.md
Plugin/source/: PluginEditor.h  PluginProcessor.h
